# fsd

./: .gitignore  README.md
src/1_perception/lidar_cone_detector/: CMakeLists.txt  package.xml
src/1_perception/lidar_cone_detector/config/: cone_detector.yaml
src/1_perception/lidar_cone_detector/include/: cone_detector.hpp  cone_detector_handle.hpp
src/1_perception/lidar_cone_detector/src/: cone_detector.cpp  cone_detector_handle.cpp
src/3_control/planning/: CMakeLists.txt  package.xml
src/3_control/planning/include/: TrackBoundaryEstimator.hpp
src/3_control/planning/include/objects/: Cone.hpp  Line.hpp  Point.hpp
src/3_control/planning/launch/: planning.launch
src/3_control/planning/src/: main.cpp  planning.cpp  planning_handle.cpp
src/3_control/planning/src/TrackBoundaryEstimation/: TrackBoundaryEstimator.cpp
src/3_control/planning/src/TrackBoundaryEstimation/objects/: Cone.cpp  Line.cpp  Point.cpp
src/controller/: CMakeLists.txt  README.md  package.xml
src/controller/scripts/: controller.py  mpc_lti.py  pid.py  pure_pursuit.py  spline.py
src/fs_msgs/: CMakeLists.txt  README.md  package.xml
src/fs_msgs/msg/: ClassifiedBoundingBoxes.msg  Cone.msg  ConeStats.msg  ConeWithStats.msg  Cones.msg  ConesWithStats.msg  ControllerOutput.msg  PIDControlled.msg  SlamState.msg
src/fssim_interface/: CMakeLists.txt  package.xml
src/fssim_interface/config/: config.yaml
src/fssim_interface/launch/: fssim.launch  localization.launch  mpc.launch  path_planner.launch
src/fssim_interface/src/: fssim_interface_node.cpp
(+8 files in other folders)
